finalização do menu
criação de 3 seções utilizando um simples framework responsivo

--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Assignment Solution for Module 2</title>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+      <h1>Menu</h1>
 
+      <div class="row">
+          <div class="col-lg-4 col-md-6 col-mn-12">
+            <section class="first">
+              <h4>Chicken</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Quam cum laborum, dolores voluptatibus eius reprehenderit
+                 aliquid ut natus labore obcaecati eaque amet voluptatum 
+                 laudantium doloribus harum at. 
+             </p>
+            </section>
+          </div>
+          <div class="col-lg-4 col-md-6 col-mn-12">
+            <section class="second">
+              <h4>Beef</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                 Quam cum laborum, dolores voluptatibus eius reprehenderit
+                  aliquid ut natus labore obcaecati eaque amet voluptatum 
+                  laudantium doloribus harum at.
+              </p>
+            </section>
+          </div>
+          <div class="col-lg-4 col-md-12 col-mn-12">
+            <section class="third">
+              <h4>Sushi</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Quam cum laborum, dolores voluptatibus eius reprehenderit
+                 aliquid ut natus labore obcaecati eaque amet voluptatum 
+                 laudantium doloribus harum at.
+            </section>
+          </div>
+      </div>
+  </body>
+</html>
